Prevent bad wrapping lifted-from

--- a/_sass/_news.scss
+++ b/_sass/_news.scss
@@ -70,6 +70,11 @@
   &__lifted-from {
     font-size: $font-size-sm;
     padding-left: 3rem;
+    @include only-less-small() {
+      padding-left: 0;
+      padding-top: 0.125rem;
+      display: block;
+    }
   }
 
   &__content {
